Version Next

    - Fixed bug where we were not parsing HTTP headers case-insensitively (pr #11)
    - Added `--blockHashPrefix' flag (issue #80)

Version 1.5.1 released April 15, 2019

    - Fixed a few places where fixed-sized buffers were too small (issue #108)
    - Don't claim cache hit if partial write required reading the block (pr #103)
    - Exit process with error code if s3backer store setup fails at startup
    - Reset statistics if stats file is unlinked (issue #106)

Version 1.5.0 released June 9, 2018

    - Add support for recovering dirty blocks in the disk cache (issue #87)
    - Replaced boolean 'mounted' flag with a unique 32-bit mount token (issue #87)
    - Wait for min_write_delay before access after write error (issue #76)
    - Configure TCP keep-alive on HTTP connections (issue #78)
    - Added support for server side encryption (pull #81)

Version 1.4.4 released February 1, 2017

    - Added `--defaultContentEncoding' for non-compliant backends (issue #68)
    - Fixed auth bug when prefix contains URL-encodable char (issue #69)
    - Remove restriction preventing streaming encryption modes (issue #70)

Version 1.4.3 released July 25, 2016

    - Add support for STANDARD_IA storage class (issue #59)
    - Set "Accept-Encoding" header appropriately (issue #48)
    - Fix build issue with OpenSSL 1.1.0 (issue #64)

Version 1.4.2 released September 1, 2015

    - Update license to fix OpenSSL vs. GPL conflict
    - Remove obsolete Debian files
    - Fix typos in help output

Version 1.4.1 released May 4, 2015

    - Fix use-after-free bug configuring base URL (github issue #44)

Version 1.4.0 released April 17, 2015

    - Added support for authentication version 4 (issue #51)
    - Added support for credentials via IAM role from EC2 meta-data (issue #48)
    - Fixed bug where `--erase' did not clear the mounted flag
    - Moved from Google project hosting to GitHub
    - Fixed compile problem on FreeBSD
